@@ -17,15 +17,15 @@
 package org.jboss.aerogear.android.push;
 
 import java.net.MalformedURLException;
-import java.net.URL;
 
 import org.jboss.aerogear.android.Callback;
 import org.jboss.aerogear.android.unifiedpush.PushConfig;
-import org.jboss.aerogear.android.impl.unifiedpush.AeroGearGCMPushRegistrar;
 
 import android.app.Application;
 import android.util.Log;
 import android.widget.Toast;
+import java.net.URI;
+import org.jboss.aerogear.android.impl.unifiedpush.PushTypes;
 import org.jboss.aerogear.android.unifiedpush.PushRegistrar;
 import org.jboss.aerogear.android.unifiedpush.Registrations;
 
@@ -35,26 +35,18 @@ public class MainApplication extends Application {
     private PushRegistrar registrar;
     private PushConfig config;
     private final Registrations registrations = new Registrations();
-    private static final String VARIANT_ID = "c4c1a7e5-3baa-445d-b1fc-f8fa503c1721";
-    private static final String SECRET = "3986daa7-427e-4d8d-ba4c-04046fbd44fc";
-    private static final String GCM_SENDER_ID = "272275396485";
-    private static final String UNIFIED_PUSH_URL = "http://10.0.2.2:8080/ag-push/rest/registry/device";
-    private static final String MY_ALIAS = "john";
 
     @Override
     public void onCreate() {
         super.onCreate();
         try {
             
-            config = new PushConfig(new URL(UNIFIED_PUSH_URL), GCM_SENDER_ID);
-            config.setVariantID(VARIANT_ID);
-            config.setSecret(SECRET);
-            config.setAlias(MY_ALIAS);
-            
-            registrar = registrations.push("registrar", config);
+            config = new PushConfig(new URI("tcp://test.mosquitto.org:1883"), "error", "bbc");
+            config.setType(PushTypes.MQTT);
+            registrar = registrations.push("mqtt", config);
             
 
-        } catch (MalformedURLException e) {
+        } catch (Exception e) {
             throw new RuntimeException(e);
         }
     }
